Revert "fix: dropdown :hover and icon alignement"
This reverts commit 348b87cb935e910e60ce3bd4b862faf8e83d1da7.

--- a/packages/mikado_reborn/src/components/Dropdown/Dropdown.scss
+++ b/packages/mikado_reborn/src/components/Dropdown/Dropdown.scss
@@ -66,7 +66,7 @@
       }
 
       li {
-        &:not([aria-selected=true]) {
+        &:not([aria-selected]) {
           cursor: pointer;
 
           &:hover {
@@ -76,7 +76,7 @@
 
         padding: 1rem 2rem;
 
-        &:not([aria-selected=true]) {
+        &:not([aria-selected]) {
           padding-left: 5rem;
         }
         .mkr__icon {
